--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="user_icon_preview_size">32dp</dimen>
 
     <dimen name="user_page_margin">16dp</dimen>
-    <dimen name="preview_margin">16dp</dimen>
+    <dimen name="preview_padding">16dp</dimen>
+    <dimen name="preview_margin">32dp</dimen>
 
 </resources>
