--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="entries_list_preference">
+    <string-array name="entries_list_preference_theme">
         <item>Dark</item>
         <item>Light</item>
     </string-array>
-    <string-array name="entry_values_list_preference">
+    <string-array name="entry_values_list_preference_theme">
         <item>AppThemeDark</item>
         <item>AppThemeLight</item>
+    </string-array>
+    <string-array name="entries_list_preference_load_count">
+        <item>20</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+    </string-array>
+    <string-array name="entry_values_list_preference_load_count">
+        <item>20</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
     </string-array>
 </resources>
