--- a/app/src/main/res/menu/menu_main_navi.xml
+++ b/app/src/main/res/menu/menu_main_navi.xml
@@ -8,9 +8,11 @@
         android:orderInCategory="0">
         <item android:id="@+id/action_tweet"
               android:title="@string/action_tweet"
+              android:checkable="false"
               app:showAsAction="never"/>
         <item android:id="@+id/action_toggle_quick_post"
               android:title="@string/action_toggle_quick_post"
+              android:checkable="false"
               app:showAsAction="never"/>
     </group>
     <group
@@ -24,6 +26,7 @@
           android:orderInCategory="100">
           <item android:id="@+id/action_settings"
                 android:title="@string/action_settings"
+                android:checkable="false"
                 app:showAsAction="never"/>
     </group>
 </menu>
