--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -26,38 +26,6 @@
         android:id="@+id/statusTextView"
         android:layout_below="@+id/statusTopLayout"
         android:layout_toEndOf="@+id/statusIconView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:alpha="0.7"
-        android:gravity="center"
-        android:visibility="gone"
-        android:paddingLeft="@dimen/status_text_vertical_margin"
-        android:paddingRight="@dimen/status_text_vertical_margin"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/app_name"
-        android:textStyle="bold"
-        android:drawableLeft="@drawable/ic_autorenew_white"
-        android:id="@+id/statusRetweetedScreenName"
-        android:layout_below="@+id/statusTextView"
-        android:layout_toEndOf="@+id/statusIconView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:alpha="0.7"
-        android:gravity="center"
-        android:paddingLeft="@dimen/status_text_vertical_margin"
-        android:paddingRight="@dimen/status_text_vertical_margin"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/app_name"
-        android:textStyle="bold"
-        android:id="@+id/statusClientName"
-        android:layout_below="@+id/statusTextView"
-        android:layout_alignParentEnd="true"/>
 
     <View
         android:layout_width="6dp"
@@ -65,7 +33,7 @@
         android:layout_marginLeft="1dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignBottom="@+id/statusClientName"
+        android:layout_alignBottom="@+id/statusBottomLayout"
         android:id="@+id/colorBarView"
         android:background="#FFEB3B"
         android:alpha="0.4"
@@ -120,5 +88,58 @@
             android:text="@string/app_name"
             android:textStyle="bold"
             android:id="@+id/statusCreatedAt"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/statusBottomLayout"
+        android:layout_below="@+id/statusTextView"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/statusIconView">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:alpha="0.7"
+            android:gravity="center"
+            android:visibility="gone"
+            android:paddingLeft="@dimen/status_text_vertical_margin"
+            android:paddingRight="@dimen/status_text_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:drawableLeft="@drawable/ic_autorenew_white"
+            android:id="@+id/statusRetweetedScreenName"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:alpha="0.7"
+            android:gravity="center|right"
+            android:paddingLeft="@dimen/status_text_vertical_margin"
+            android:paddingRight="@dimen/status_text_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:id="@+id/statusClientName"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/statusBottomLayout"
+        android:id="@+id/imagePreviewLayout"
+        android:layout_below="@+id/statusBottomLayout"
+        android:layout_toEndOf="@+id/statusIconView">
     </LinearLayout>
 </RelativeLayout>
