--- a/app/src/main/res/layout/status_detail.xml
+++ b/app/src/main/res/layout/status_detail.xml
@@ -76,6 +76,19 @@
         android:id="@+id/statusCreatedAt"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"/>
+
+    <View
+        android:layout_width="6dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="1dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignBottom="@+id/statusClientName"
+        android:id="@+id/colorBarView"
+        android:background="#FFEB3B"
+        android:alpha="0.4"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
