--- a/app/src/main/res/xml/appearance_preference.xml
+++ b/app/src/main/res/xml/appearance_preference.xml
@@ -42,4 +42,10 @@
         android:defaultValue="true"
         android:switchTextOff="OFF"
         android:switchTextOn="ON"/>
+    <SwitchPreference
+        android:key="@string/preference_key_show_thumbnail"
+        android:title="@string/setting_item_show_thumbnail"
+        android:defaultValue="true"
+        android:switchTextOff="OFF"
+        android:switchTextOn="ON"/>
 </PreferenceScreen>
