add icon and small fix

--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:id="@+id/itemView"
               android:paddingTop="@dimen/status_horizontal_margin"
               android:paddingBottom="@dimen/status_horizontal_margin"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="1"
             android:paddingLeft="0dp"
             android:paddingRight="@dimen/status_text_vertical_short_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="1"
             android:alpha="0.7"
             android:gravity="center|left"
             android:paddingLeft="0dp"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="1"
             android:alpha="0.7"
             android:gravity="center"
             android:paddingLeft="@dimen/status_text_vertical_margin"
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="1"
             android:alpha="0.7"
             android:gravity="center"
             android:visibility="gone"
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="1"
             android:alpha="0.7"
             android:gravity="center|right"
             android:paddingLeft="@dimen/status_text_vertical_margin"
