--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -1,9 +1,8 @@
 <android.support.design.widget.NavigationView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:id="@+id/navigationView"
-    app:headerLayout="@layout/drawer_header"
-    app:menu="@menu/drawer"/>
+    app:headerLayout="@layout/drawer_header"/>
